# Eisen

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  contribution.md
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: graphics.rs  kernel.rs  lib.rs  main.rs  memory.rs
docs/: index.md
docs/licenses/: licensing.md
kernel/: Cargo.toml  kernel-target.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
setup/: setup-arch.sh
src/: main.rs
