[package]
name = "bootloader"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
uefi = "0.26.0"
uefi-services = "0.23.0"
xmas-elf = "0.9.1"

[lib]
name = "bootloader_lib"
path = "src/lib.rs"
